--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,36 +8,62 @@
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
+
 <body>
-       <div class="container">
+    <div class="container">
         <div class="header">
             <ul>
                 <img src="./img/logo.svg" alt="logo-img" width="281" height="43">
 
                 <li class="header-li"> <a href="#">
-                    Why Open Enterprise
-                </a></li>
+                        Why Open Enterprise
+                    </a></li>
                 <li class="header-li"> <a href="#">
-                    Features
-                </a></li>
+                        Features
+                    </a></li>
                 <li class="header-li"> <a href="#">
-                    Contribute
-                </a></li>
+                        Contribute
+                    </a></li>
                 <li class="active"> <a href="#">
-                    Request early access
-                </a></li>
+                        Request early access
+                    </a></li>
             </ul>
         </div>
-<div class="hero">
-      <div class="hero-text">
-        <h2>A new model for open collaboration</h2>
-        <p>Run an organization where members get rewarded for their contributions with fractional ownership.</p>
-         <button class="btn" type="button">Request early access</button>
-      </div>
+        <div class="hero">
+            <div class="hero-text">
+                <h2>A new model for open collaboration</h2>
+                <p>Run an organization where members get rewarded for their contributions with fractional ownership.</p>
+                <button class="btn" type="button">Request early access</button>
+            </div>
 
-      <img src="./img/pohoto-1.png" alt="1-photo" width="650" height="700">
+            <img src="./img/pohoto-1.png" alt="1-photo" width="650" height="700">
 
-</div>
-       </div>
+        </div>
+        <div class="center-text">
+            <div class="text">
+                <h2>Reimagining what it means to work</h2>
+                <p>Teams and communities using Open Enterprise fundamentally unlock a reality of work that reimagines
+                    how people engage in economic opportunity, meeting the demands and expectations of a modern
+                    organization.</p>
+            </div>
+        </div>
+        <div class="section-1">
+            <ul>
+                <li><a href="#"><img src="./img/Icon.svg" alt="">
+                        <h3>Modern workforce</h3>
+                        <p>Multistakeholder governance aligns employees with the organization’s wider community.</p>
+                    </a></li>
+                    <li><a href="#"><img src="img/Icon (1).svg" alt="">
+                        <h3> Meritocratic by design</h3>
+                        <p>Tokenized ownership aligns deeply committed individuals with the organization’s success.</p>
+                    </a></li>
+                    <li><a href="#"><img src="./img/Icon.svg" alt="">
+                        <h3> Engineered for resilience</h3>
+                        <p>Open Enterprise supports best practices in sociocratic management.</p>
+                    </a></li>
+            </ul>
+        </div>
+    </div>
 </body>
+
 </html>
