--- a/index.html
+++ b/index.html
@@ -49,22 +49,62 @@
         </div>
         <div class="section-1">
             <ul>
-                <li><a href="#"><img src="./img/Icon.svg" alt="">
+                <li><a href="#"><img src="./img/Icon.svg" alt="" width="80" height="80">
+                    <div class="li-text-box">
                         <h3>Modern workforce</h3>
-                        <p>Multistakeholder governance aligns employees with the organization’s wider community.</p>
+                        <p>Multistakeholder governance aligns employees with the organization’s wider community.</p></div>
                     </a></li>
 
-                <li><a href="#"><img src="img/Icon (1).svg" alt="">
+                <li><a href="#"><img src="img/Icon (1).svg" alt="" width="80" height="80">
+                    <div class="li-text-box">
                         <h3> Meritocratic by design</h3>
-                        <p>Tokenized ownership aligns deeply committed individuals with the organization’s success.</p>
+                        <p>Tokenized ownership aligns deeply committed individuals with the organization’s success.</p></div>
                     </a></li>
                     
-                <li><a href="#"><img src="./img/Icon.svg" alt="">
+                <li><a href="#"><img src="./img/Icon.svg" alt="" width="80" height="80">
+                    <div class="li-text-box">
                         <h3> Engineered for resilience</h3>
-                        <p>Open Enterprise supports best practices in sociocratic management.</p>
+                        <p>Open Enterprise supports best practices in sociocratic management.</p></div>
                     </a></li>
             </ul>
             
+        </div>
+
+        <div class="section-2">
+            <div class="text-right">
+                <img src="./img/icon-1.svg" alt="" width="80" height="80">
+                <h2>Kickstart an organization with your co-founders</h2>
+                <p>It’s the early days, you just had a long conversation with two friends about a meaningful challenge that you’re all passionate about and have a potential solution for. You’re ready to embark the startup journey.</p>
+
+
+            </div>
+            <div class="img">
+                <div class="img-style">
+            <img class="img-1" src="./img/members.png" alt="" width="484" height="400">
+            <div class="img-style-1">
+            <img class="img-2" src="./img/members-bg.png" alt="" width="484" height="400">
+            </div>
+                </div>
+            </div>
+        </div>
+        <div class="section-3">
+            <img src="./img/members-1.png" alt="" width="484" height="412">
+
+            <div class="text-left">
+                <img src="./img/icon-s-3.svg" alt="" width="80" height="80">
+                <h2>Onboard users, investors and advisors as you grow</h2>
+                <p>You’ve bootstrapped and delivered an MVP, and some investors and advisors are interested in having a chat with you. As an Open Enterprise, you can onboard them seamlessly into your digital organization and align them with your success.</p>
+            </div>
+        </div>
+ 
+        <div class="section-4">
+            <div class="text-4s"> 
+                <img src="./img/icon-s-4.svg" alt="" width="80" height="80">
+                <h2>Engage highly committed contributors</h2>
+                <p>You need talented people on-demand across various tasks that your full-time workforce can’t prioritize at the moment. As an Open Enterprise, you can easily fund tasks and have people apply to work on them in return for funds or shares.</p>
+
+            </div>
+            <img src="./img/s-4-ph.png" alt="" width="644" height="500">
         </div>
     </div>
 </body>
